--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,15 +7,34 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable 'chip8'",
+            "name": "Debug unit tests in library 'chip8'",
             "cargo": {
                 "args": [
-                    "build",
-                    "--bin=chip8",
+                    "test",
+                    "--no-run",
+                    "--lib",
                     "--package=chip8"
                 ],
                 "filter": {
                     "name": "chip8",
+                    "kind": "lib"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'main'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=main",
+                    "--package=chip8"
+                ],
+                "filter": {
+                    "name": "main",
                     "kind": "bin"
                 }
             },
@@ -25,16 +44,16 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable 'chip8'",
+            "name": "Debug unit tests in executable 'main'",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
-                    "--bin=chip8",
+                    "--bin=main",
                     "--package=chip8"
                 ],
                 "filter": {
-                    "name": "chip8",
+                    "name": "main",
                     "kind": "bin"
                 }
             },
